2007-12-13  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_frame_alloc): When allocating the first
	frame, set EXCEPTION_PAGE->EXCEPTION_STACK_BOTTOM.
	(exception_page_cleanup): New function.

	* ia32-exception-entry.S (_exception_handler_end): Correctly
	adjust the exception page's exception stack.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (munmap): Free the virtual addresses.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* storage.c (ss_lock_trace) [! NDEBUG]: New definition.
	(ss_lock_trace_count) [! NDEBUG]: Likewise.

2007-12-12  Neal H. Walfield  <neal@gnu.org>

	* mmap.c (munmap): Implement.
	* pager.h (pager_destroy_t): New type.
	(struct pager): New field, destory.
	(pagers): New declaration.
	* pager.c (pagers): Remove static qualifier.
	* anonymous.c (destroy): New function.
	(anonymous_pager_alloc): Set ANON->PAGER.DESTROY to it.
	(anonymous_pager_destroy): Call destroy to do the bulk of the
	work.

2007-12-10  Neal H. Walfield  <neal@gnu.org>

	* as.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(free_spaces_lock): Make an ss_mutex_t, not a pthread_mutex_t.
	Update users.
	* storage.c: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(struct storage_desc): Make lock an ss_mutex_t, not a
	pthread_mutex_t.  Update users.
	(storage_descs_lock): Likewise.
	* pager.h: Don't include <pthread.h>.  Include <hurd/mutex.h>.
	(struct pager): Make lock an ss_mutex_t, not a pthread_mutex_t.
	Update users.
	(pagers_lock): Likewise.

2007-12-06  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (exception_frame_alloc): Correctly set the
	EXCEPTION_PAGE->EXCEPTION_STACK to the allocated frame.
	(utcb_state_save): New function.
	(utcb_state_restore): Likewise.
	(exception_handler_normal): Call utcb_state_restore before
	returning.
	(exception_handler_activated): Save the UTCB state.  If returning
	without requiring a call to exception_handler_normal, then restore
	the UTCB state.

2007-12-05  Neal H. Walfield  <neal@gnu.org>
